# POSYDON

./: .buildinfo  .codecov.yml  .coveragerc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTORS  LICENSE.md  MANIFEST.in  README.md  api.html  genindex.html  index.html  latest  make_old_versions.sh  modindex.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  versioneer.py
BinaryStar/: BinaryStar.html
PSyGrid/: PSyGrid.html
SingleStar/: SingleStar.html
_modules/: compress_mesa.html  index.html  posydon_run_grid.html  posydon_run_pipeline.html  posydon_setup_grid.html  posydon_setup_pipeline.html  posydon_setup_popsyn.html  run_pipeline.html  setup_pipeline.html
_sources/: api.rst.txt
_static/: custom.css  documentation_options.js
about/: attribution.html  licence.html
advanced_pop_options/: custom_hooks.html  debugging_binaries.html
api/: posydon.active_learning.html  posydon.active_learning.psy_cris.classify.html  posydon.active_learning.psy_cris.data.html  posydon.active_learning.psy_cris.html  posydon.active_learning.psy_cris.regress.html  posydon.active_learning.psy_cris.sample.html  posydon.active_learning.psy_cris.synthetic_data.html  posydon.active_learning.psy_cris.synthetic_data.synth_data_2D.html  posydon.active_learning.psy_cris.synthetic_data.synth_data_3D.html  posydon.active_learning.psy_cris.utils.html  posydon.binary_evol.CE.html  posydon.binary_evol.CE.step_CEE.html  posydon.binary_evol.DT.double_CO.html  posydon.binary_evol.DT.html  posydon.binary_evol.DT.step_detached.html  posydon.binary_evol.DT.step_disrupted.html  posydon.binary_evol.DT.step_initially_single.html  posydon.binary_evol.DT.step_isolated.html  posydon.binary_evol.DT.step_merged.html  posydon.binary_evol.MESA.html  posydon.binary_evol.MESA.step_mesa.html  posydon.binary_evol.SN.html  posydon.binary_evol.SN.profile_collapse.html  posydon.binary_evol.SN.step_SN.html  posydon.binary_evol.binarystar.html  posydon.binary_evol.html  posydon.binary_evol.simulationproperties.html  posydon.binary_evol.singlestar.html  posydon.binary_evol.step_end.html  posydon.grids.MODELS.html  posydon.grids.downsampling.html  posydon.grids.downsampling_report.html  posydon.grids.html  posydon.grids.io.html  posydon.grids.post_processing.html  posydon.grids.psygrid.html  posydon.grids.scrubbing.html  posydon.grids.termination_flags.html  posydon.html  posydon.interpolation.IF_interpolation.html  (+42 more)
api_reference/: bin.html  compress_mesa.html  get_posydon_data.html  posydon.active_learning.html  posydon.active_learning.psy_cris.html  posydon.active_learning.psy_cris.run_params.html  posydon.active_learning.psy_cris.synthetic_data.html  posydon.binary_evol.CE.html  posydon.binary_evol.DT.html  posydon.binary_evol.MESA.html  posydon.binary_evol.SN.html  posydon.binary_evol.html  posydon.grids.html  posydon.html  posydon.interpolation.html  posydon.popsyn.html  posydon.unit_tests.grids.html  posydon.unit_tests.html  posydon.unit_tests.popsyn.html  posydon.unit_tests.utils.html  posydon.user_modules.html  posydon.utils.html  posydon.visualization.VH_diagram.html  posydon.visualization.html  posydon_popsyn.html  posydon_run_grid.html  posydon_run_pipeline.html  posydon_setup_grid.html  posydon_setup_pipeline.html  posydon_setup_popsyn.html  run_pipeline.html  setup_pipeline.html
components-overview/: machine-learning-components.html  mesa-grids.html  processing-pipeline.html  stellar-binary-simulation.html
conda/: meta.yaml
contact-support/: contact-information.html
contributing/: code-style-guidelines.html  how-to-contribute.html  reporting-issues.html
data/: data.html
dev-tools/: .gitignore  README.md  binaries_suite.py  check_outputs.ipynb  compare_runs.py  evolve_binaries.sh  evolve_population.sh  generate_baseline.sh  run_test_suite.sh  validate_binaries.sh
development/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/: Makefile  conf.py  index.rst  modules.rst  posydon.active_learning.psy_cris.rst  posydon.active_learning.psy_cris.synthetic_data.rst  posydon.binary_evol.CE.rst  posydon.binary_evol.DT.rst  posydon.binary_evol.MESA.rst  posydon.binary_evol.SN.rst  posydon.binary_evol.rst  posydon.grids.rst  posydon.interpolation.rst  posydon.popsyn.rst  posydon.utils.rst  posydon.visualization.VH_diagram.rst  posydon.visualization.rst
getting-started/: installation-guide.html  prerequisites.html  verification.html
grid_params/: grid_params.ini  pipeline_quest.ini  pipeline_yggdrasil.ini
install/: install.html
interpolation/: violinplot.html
introduction-acknowledgements/: collaborative-team.html  intro.html  published-works.html
pop_synth/: POSYDON_populations.html  custom_flow.html  pop_synth.html
posydon/: __init__.py  _version.py  config.py
posydon-workflow/: interacting-binary-grids.html  mesa-evolutionary-tracks.html  population-specification.html  running-simulations.html  stellar-evolution-choices.html
release-notes/: major-updates.html  version-history.html
run_mesa_grids/: inifile.html
test_suite/: evolve_binaries.sh
troubleshooting-faqs/: code-questions.html  installation-issues.html
user-guides/: database-query-system.html  user-roadmap.html  web-application.html
v1.0.0/: .buildinfo  api.html  genindex.html  index.html  modindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.0.4/: .buildinfo  api.html  genindex.html  index.html  modindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.0.5/: .buildinfo  api.html  genindex.html  index.html  modindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v2.0.0-pre1/: .buildinfo  genindex.html  index.html  objects.inv  (+4 more)
(+6030 files in other folders)
